--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zaksiu-portfolio-website",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,7 +18,8 @@
     "react-particles": "^2.12.2",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1",
-    "tsparticles-slim": "^2.12.0"
+    "tsparticles-slim": "^2.12.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
