--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "zaksiu-portfolio-website",
   "private": true,
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "module",
+  "author": {
+    "name": "Maksymilian Zając",
+    "email": "zajacmaksymilian@icloud.com",
+    "url": "https://github.com/zaksiu12s"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
