--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.3.0",
     "react-particles": "^2.12.2",
+    "react-router-dom": "^7.1.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1",
     "tsparticles-slim": "^2.12.0",
