--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.11",
     "emailjs-com": "^3.2.0",
     "i18next": "^24.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^15.3.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.1.1",
