--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zaksiu-portfolio-website",
   "private": true,
-  "version": "1.4.1",
+  "version": "1.4.3",
   "type": "module",
   "author": {
     "name": "Maksymilian Zając",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/react-helmet": "^6.1.11",
+    "analytics": "^0.8.16",
     "emailjs-com": "^3.2.0",
     "i18next": "^24.2.0",
     "react": "^18.3.1",
