--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zaksiu-portfolio-website",
   "private": true,
-  "version": "1.5.0",
+  "version": "1.5.1",
   "type": "module",
   "author": {
     "name": "Maksymilian Zając",
@@ -12,11 +12,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@types/react-helmet": "^6.1.11",
-    "analytics": "^0.8.16",
     "emailjs-com": "^3.2.0",
     "i18next": "^24.2.0",
     "react": "^18.3.1",
@@ -34,11 +34,13 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
